# huginn-net

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  astro.config.mjs  bump-version.sh  deny.toml  header.html  index.html  package-lock.json  package.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: index.js
benches/: README-HTTP.md  README-TCP.md  README-TLS.md  README.md  bench_http.rs  bench_tcp.rs  bench_tls.rs  benchmark.rs  run_bench.sh
config/: ja4_signatures.csv  p0f.fp
css/: main.css  styles.css
docs/: admin.html  consumers.html  getting-started.html  (+4 more)
huginn-net/: Cargo.toml  README.md
huginn-net-db/: Cargo.toml  README.md
huginn-net-db/config/: p0f-tcp-syn.fp
huginn-net-db/src/: db.rs  db_matching_trait.rs  db_parse.rs  display.rs  error.rs  http.rs  http_signature_matcher.rs  lib.rs  observable_http_signals_matching.rs  observable_signals.rs  observable_tcp_signals_matching.rs  tcp.rs  tcp_signature_matcher.rs  utils.rs
huginn-net-db/src/database/: collection.rs  constants.rs  full.rs  http.rs  keys.rs  label.rs  mod.rs  tcp.rs
huginn-net-db/src/http/: distances.rs  matching.rs  mod.rs  signature.rs
huginn-net-db/src/matcher/: http_signature_matcher.rs  tcp_signature_matcher.rs  traits.rs
huginn-net-db/src/parse/: common.rs  http.rs  mod.rs  tcp.rs
huginn-net-db/src/tcp/: distances.rs  matching.rs  mod.rs  signature.rs
huginn-net-db/tests/: database.rs  db.rs  db_parse.rs  golden_http_matching.rs  golden_http_pcap_matching.rs  golden_tcp_matching.rs  golden_tcp_pcap_matching.rs  http_distance_header.rs  http_matcher.rs  http_pcap_golden.rs  http_signature_matcher.rs  observable_http_signals_matching.rs  tcp.rs  tcp_matcher.rs  tcp_pcap_golden.rs  tcp_signature_matcher.rs
huginn-net-db/tests/snapshots/: http-simple-get.json  macos_tcp_flags.pcap.json
huginn-net-http/: Cargo.toml  README.md
huginn-net-http/src/: akamai.rs  akamai_extractor.rs  analyzer.rs  display.rs  error.rs  filter.rs  http.rs  http1_parser.rs  http1_process.rs  http2_fingerprint_extractor.rs  http2_parser.rs  http2_process.rs  http_common.rs  http_languages.rs  http_process.rs  lib.rs  matcher_api.rs  observable.rs  output.rs  parallel.rs  process.rs  signature_matcher.rs
huginn-net-http/src/akamai/: extractor.rs  mod.rs
huginn-net-http/src/http/: common.rs  mod.rs  observable.rs
huginn-net-http/src/http1/: mod.rs  parser.rs  process.rs
huginn-net-http/src/http2/: fingerprint.rs  frames.rs  mod.rs  parser.rs  process.rs
huginn-net-http/src/output/: common.rs  mod.rs  request.rs  response.rs
huginn-net-http/src/parser/: hash.rs
huginn-net-http/src/process/: flow.rs  mod.rs  parallel.rs
huginn-net-http/tests/: akamai.rs  akamai_extractor.rs  akamai_golden_tests.rs  akamai_paper_golden.rs  akamai_paper_golden_tests.rs  akamai_pcap_golden.rs  filter_tests.rs  golden_tests.rs  http1_parser.rs  http1_process.rs  http2_fingerprint.rs  http2_fingerprint_extractor.rs  http2_parser.rs  http2_process.rs  http_languages.rs  http_process.rs  packet_parser.rs  parser_hash.rs  pcap_golden.rs  process_flow.rs  raw_filter_tests.rs  signature_matcher.rs
huginn-net-http/tests/snapshots/: akamai_paper_cases.json  akamai_paper_simple_cases.json  akamai_test_cases.json  http-simple-get.json
huginn-net-tcp/: Cargo.toml  README.md
huginn-net-tcp/src/: analyzer.rs  display.rs  error.rs  ip_options.rs  lib.rs  matcher_api.rs  mtu.rs  observable.rs  output.rs  packet_parser.rs  parallel.rs  process.rs  raw_filter.rs  signature_matcher.rs  syn_options.rs  tcp.rs  tcp_process.rs  ttl.rs  types.rs  uptime.rs  window_size.rs
huginn-net-tcp/src/filter/: config.rs  mod.rs  raw.rs
huginn-net-tcp/src/mtu/: extractor.rs  mod.rs  observable.rs
huginn-net-tcp/src/output/: common.rs  mod.rs  mtu.rs  syn.rs  syn_ack.rs  uptime.rs
huginn-net-tcp/src/parser/: hash.rs  mod.rs  packet.rs
huginn-net-tcp/src/process/: flow.rs  mod.rs  parallel.rs
huginn-net-tcp/src/tcp/: ip_options.rs  mod.rs  observable.rs  syn_options.rs  ttl.rs  window_size.rs
huginn-net-tcp/src/uptime/: calculator.rs  mod.rs  observable.rs  tracker.rs
huginn-net-tcp/tests/: backward_timestamps.rs  debug_uptime.rs  endianness.rs  filter.rs  frequency_rounding.rs  golden_tests.rs  improved_tracking.rs  ip_options.rs  packet_hash.rs  packet_parser.rs  parallel_tests.rs  pcap_golden.rs  raw_filter_tests.rs  signature_matcher.rs  syn_options.rs  tcp_process.rs  tcp_window_size.rs  ttl.rs  uptime_backward_ts.rs  uptime_calculator.rs  uptime_tracker_flow.rs  uptime_validations.rs  window_size.rs
huginn-net-tcp/tests/snapshots/: macos_tcp_flags.pcap.json
huginn-net-tls/: Cargo.toml  README.md
huginn-net-tls/src/: analyzer.rs  datalink_parser.rs  error.rs  filter.rs  lib.rs  observable.rs  output.rs  packet_hash.rs  packet_parser.rs  parallel.rs  process.rs  raw_filter.rs  tls.rs  tls_client_hello_reader.rs  tls_process.rs
huginn-net-tls/src/filter/: raw.rs
huginn-net-tls/src/fingerprint/: grease.rs  ja4.rs  mod.rs  observable.rs  signature.rs  version.rs
huginn-net-tls/src/output/: mod.rs
huginn-net-tls/src/parser/: client_hello_reader.rs  mod.rs
huginn-net-tls/src/process/: mod.rs  parallel.rs  tls.rs
huginn-net-tls/tests/: filter.rs  filter_tests.rs  fingerprint.rs  golden_tests.rs  packet_hash.rs  packet_parser.rs  parallel.rs  parallel_tests.rs  parser_packet.rs  pcap_golden.rs  process.rs  raw_filter_tests.rs  test_pcap_snapshots.rs  test_tls12_pcap.rs  tls.rs  tls_client_hello_reader.rs  tls_process.rs
huginn-net-tls/tests/snapshots/: macos_safari_tls_extensions.pcap.json  tls-alpn-h2.pcap.json  tls12.pcap.json
huginn-net/src/: error.rs  fingerprint_result.rs  lib.rs  matcher.rs  output.rs  packet_parser.rs  process.rs  signature_matcher.rs
huginn-net/src/analyzer/: matchers.rs  mod.rs
huginn-net/src/output/: mod.rs
huginn-net/src/parser/: packet.rs
huginn-net/src/process/: mod.rs
huginn-net/tests/: golden_e2e.rs  parser_packet.rs  smoke.rs  smoke_tests.rs
(+224 files in other folders)
