[workspace]
members = [
    "huginn-net-db",
    "huginn-net-tls",
    "huginn-net-http",
    "huginn-net-tcp",
    "huginn-net"
]
resolver = "2"

[workspace.dependencies]
# Internal crates (not published)
huginn-net-db = { path = "huginn-net-db", version = "1.4.6" }

# Published crates
huginn-net-tcp = { path = "huginn-net-tcp", version = "1.4.6" }
huginn-net-http = { path = "huginn-net-http", version = "1.4.6" }
huginn-net-tls = { path = "huginn-net-tls", version = "1.4.6" }

nom = "8.0.0"
pnet = "0.35.0"
thiserror = "2.0.16"
tracing = "0.1.41"
tls-parser = "0.12.2"
sha2 = "0.10.9"
ttl_cache = "0.5.1"
lazy_static = "1.5.0"
pcap-file = "3.0.0-rc1"
hpack-patched = "0.3.0"

# Examples and dev dependencies
clap = { version = "4.5.48", features = ["derive"] }
ctrlc = "3.5.0"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
criterion = { version = "0.7.0", features = ["html_reports"] }
