[workspace]
members = [
    "huginn-net",
    "huginn-net-db",
    "huginn-net-http",
    "huginn-net-tcp",
    "huginn-net-tls",
]
resolver = "2"

[workspace.package]
version = "1.7.2"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
authors = ["Maximiliano Biandratti"]
repository = "https://github.com/biandratti/huginn-net"
homepage = "https://github.com/biandratti/huginn-net"

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
hpack-patched = "0.3.0"
huginn-net-db = { path = "huginn-net-db", version = "1.7.2" }
huginn-net-http = { path = "huginn-net-http", version = "1.7.2" }
huginn-net-tcp = { path = "huginn-net-tcp", version = "1.7.2" }
huginn-net-tls = { path = "huginn-net-tls", version = "1.7.2" }
lazy_static = "1.5.0"

nom = "8.0.0"
pcap-file = "3.0.0-rc1"
pnet = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tls-parser = "0.12.2"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ttl_cache = "0.5.1"
