[package]
name = "huginn-net-db"
description = "P0f database parser and matching traits for huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["p0f", "database", "parser", "fingerprinting", "network"]
categories = ["network-programming"]

[features]
default = ["tcp", "http"]
tcp = ["dep:huginn-net-tcp"]
http = ["dep:huginn-net-http"]

[dependencies]
huginn-net-http = { workspace = true, optional = true }
huginn-net-tcp = { workspace = true, optional = true, default-features = false }
nom = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# The TCP integration test (`tests/tcp_pcap_golden.rs`) destructures every
# field of `TcpAnalysisResult` (syn, syn-ack, mtu, uptime), so the test build
# must activate all four `huginn-net-tcp` features. The non-test build keeps
# `default-features = false` (see `[dependencies]` above) so feature
# unification does not leak into downstream binaries.
huginn-net-tcp = { workspace = true, features = ["syn", "syn-ack", "mtu", "uptime"] }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
