[package]
name = "huginn-net-db"
description = "P0f database parser and matching traits for huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["p0f", "database", "parser", "fingerprinting", "network"]
categories = ["network-programming"]

[features]
default = []
full = ["tcp", "http"]
tcp = ["dep:huginn-net-tcp"]
http = ["dep:huginn-net-http"]

[dependencies]
huginn-net-http = { workspace = true, optional = true }
huginn-net-tcp = { workspace = true, optional = true }
nom = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
huginn-net-http = { workspace = true, features = ["full"] }
huginn-net-tcp = { workspace = true, features = ["full"] }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
