[package]
name = "huginn-net-http"
description = "HTTP fingerprinting (p0f-style) analysis for huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["http", "fingerprinting", "browser", "p0f", "security"]
categories = ["network-programming", "web-programming"]

[features]
default = []
full = ["p0f-request", "p0f-response", "akamai"]
json = ["dep:serde"]
p0f-request = []
p0f-response = []
akamai = []

[dependencies]
crossbeam-channel = { workspace = true }
hpack-patched = { workspace = true }
lazy_static = { workspace = true }
pcap-file = { workspace = true }
pnet = { workspace = true }
serde = { workspace = true, optional = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ttl_cache = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
criterion = { workspace = true }
ctrlc = { workspace = true }
huginn-net-db = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "cli-http"
path = "../examples/cli-http.rs"
required-features = ["p0f-request", "p0f-response"]

[[bench]]
name = "bench_http"
path = "../benches/bench_http.rs"
harness = false
required-features = ["p0f-request", "p0f-response"]
