[package]
name = "huginn-net-tcp"
description = "TCP fingerprinting and analysis for huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tcp", "fingerprinting", "network", "security"]
categories = ["network-programming"]

[features]
default = []
full = ["syn", "syn-ack", "mtu", "uptime"]
json = ["dep:serde"]
syn = []
syn-ack = []
mtu = []
uptime = ["dep:ttl_cache"]

[dependencies]
crossbeam-channel = { workspace = true }
pcap-file = { workspace = true }
pnet = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ttl_cache = { workspace = true, optional = true }

[dev-dependencies]
clap = { workspace = true }
criterion = { workspace = true }
ctrlc = { workspace = true }
huginn-net-db = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "capture-tcp"
path = "../examples/capture-tcp.rs"
required-features = ["syn", "syn-ack", "mtu", "uptime"]

[[bench]]
name = "bench_tcp"
path = "../benches/bench_tcp.rs"
harness = false
required-features = ["syn", "syn-ack", "mtu", "uptime"]
