[package]
name = "huginn-net-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "TLS fingerprinting and JA4 analysis for Huginn Net"
license = "MIT OR Apache-2.0"
authors = ["Maximiliano Biandratti"]
repository = "https://github.com/biandratti/huginn-net"

[dependencies]
tls-parser = { workspace = true }
sha2 = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
