[package]
name = "huginn-net-tls"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "TLS fingerprinting and JA4 analysis for Huginn Net"
license = "MIT OR Apache-2.0"
authors = ["Maximiliano Biandratti"]
repository = "https://github.com/biandratti/huginn-net"
homepage = "https://github.com/biandratti/huginn-net"
documentation = "https://docs.rs/huginn-net-tls"
readme = "README.md"
keywords = ["tls", "JA4", "fingerprinting", "network", "security"]
categories = ["network-programming", "cryptography"]
exclude = ["target/", "Cargo.lock"]

[dependencies]
tls-parser = { workspace = true }
sha2 = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "capture-tls"
path = "../examples/capture-tls.rs"

[dev-dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
