[package]
name = "huginn-net-tls"
description = "TLS fingerprinting and JA4 analysis for huginn-net"
documentation = "https://docs.rs/huginn-net-tls"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tls", "JA4", "fingerprinting", "network", "security"]
categories = ["network-programming", "cryptography"]

[dependencies]
tls-parser = { workspace = true }
sha2 = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
pcap-file = { workspace = true }

[[example]]
name = "capture-tls"
path = "../examples/capture-tls.rs"

[dev-dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
