[package]
name = "huginn-net"
description = "Multi-protocol passive fingerprinting library: TCP/HTTP (p0f-style) + TLS (JA4) analysis"
documentation = "https://docs.rs/huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["p0f", "JA4", "fingerprinting", "network", "security"]
categories = ["network-programming", "cryptography", "development-tools"]

[dependencies]
huginn-net-db = { workspace = true }
huginn-net-tls = { workspace = true }
huginn-net-http = { workspace = true }
huginn-net-tcp = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pnet = { workspace = true }
ttl_cache = { workspace = true }
lazy_static = { workspace = true }
pcap-file = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
criterion = { workspace = true }
ctrlc = { workspace = true }

[[example]]
name = "capture"
path = "../examples/capture.rs"


[[bench]]
name = "benchmark"
path = "../benches/benchmark.rs"
harness = false

[[bench]]
name = "bench_tls"
path = "../benches/bench_tls.rs"
harness = false
