[package]
name = "huginn-net"
description = "Multi-protocol passive fingerprinting library: TCP/HTTP (p0f-style) + TLS (JA4) analysis"
documentation = "https://docs.rs/huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["p0f", "JA4", "fingerprinting", "network", "security"]
categories = ["network-programming", "cryptography", "development-tools"]

[dependencies]
huginn-net-db = { workspace = true }
huginn-net-http = { workspace = true }
huginn-net-tcp = { workspace = true }
huginn-net-tls = { workspace = true }
lazy_static = { workspace = true }
pcap-file = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ttl_cache = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "capture"
path = "../examples/capture.rs"
