[package]
name = "huginn-net"
description = "Multi-protocol passive fingerprinting library: TCP/HTTP (p0f-style) + TLS (JA4) analysis"
documentation = "https://docs.rs/huginn-net"
readme = "README.md"
exclude = ["target/"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["p0f", "JA4", "fingerprinting", "network", "security"]
categories = ["network-programming", "cryptography", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
full = [
    "db",
    "tcp-syn",
    "tcp-syn-ack",
    "tcp-mtu",
    "tcp-uptime",
    "http-p0f-request",
    "http-p0f-response",
    "tls-stable-v1",
]
db = ["dep:huginn-net-db", "huginn-net-db/tcp", "huginn-net-db/http"]
http-p0f-request = ["huginn-net-http/p0f-request"]
http-p0f-response = ["huginn-net-http/p0f-response"]
tcp-mtu = ["huginn-net-tcp/mtu"]
tcp-syn = ["huginn-net-tcp/syn"]
tcp-syn-ack = ["huginn-net-tcp/syn-ack"]
tcp-uptime = ["huginn-net-tcp/uptime"]
tls-stable-v1 = ["huginn-net-tls/stable-v1"]

[dependencies]
huginn-net-db = { workspace = true, optional = true }
huginn-net-http = { workspace = true }
huginn-net-tcp = { workspace = true }
huginn-net-tls = { workspace = true }
pcap-file = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ttl_cache = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
ctrlc = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "capture"
path = "../examples/capture.rs"
required-features = [
    "db",
    "tcp-syn",
    "tcp-syn-ack",
    "tcp-mtu",
    "tcp-uptime",
    "tls-stable-v1",
    "http-p0f-request",
    "http-p0f-response",
]
